<resources>
    <string name="app_name">NDP songs</string>
    <string name="title">Song title</string>
    <string name="hint_title">Enter song title here</string>
    <string name="singer">Singers</string>
    <string name="hint_singer">Enter singers name here</string>
    <string name="year">Year</string>
    <string name="year_hint">Enter year of release</string>
    <string name="stars">Stars</string>
    <string name="insert">Insert</string>
    <string name="list">Show list</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="btnFilter">Show all songs with 5 stars</string>
    <string-array name="spinner_Year">
        <item>All</item>
        <item>1998</item>
        <item>2002</item>
        <item>2015</item>
    </string-array>
</resources>